--- a/app/src/main/res/layout/fragment_categores.xml
+++ b/app/src/main/res/layout/fragment_categores.xml
@@ -16,11 +16,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
+        <by.chagarin.androidlesson.fragments.fragments.NonSwipeableViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white" />
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
@@ -31,8 +31,6 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:src="@drawable/ic_add_white_24dp"
-            app:fab_colorNormal="@color/primary"
-            app:fab_colorPressed="@color/accent_pressed"
-            app:fab_colorRipple="@color/ripple" />
+            app:backgroundTint="@color/primary" />
     </android.support.design.widget.CoordinatorLayout>
 </android.support.design.widget.AppBarLayout>
