--- a/app/src/main/res/layout/fragment_categores.xml
+++ b/app/src/main/res/layout/fragment_categores.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <by.chagarin.androidlesson.fragments.fragments.NonSwipeableViewPager
+        <by.chagarin.androidlesson.fragments.categorys_fragments.NonSwipeableViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
